--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://use.typekit.net/kxc3zmz.css');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -72,5 +75,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: "Manrope", sans-serif;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "replica", sans-serif;
+    font-weight: 700;
   }
 }
